--- a/fixme.dtx
+++ b/fixme.dtx
@@ -172,7 +172,8 @@
 % \DescribeMacro{\fxnote}
 % \DescribeMacro{\fxwarning}
 % \DescribeMacro{\fxerror}
-% \DescribeMacro{\fxfatal}\oarg{options}\marg{note}\\
+% \DescribeMacro{\fxfatal}
+% \oarg{options}\marg{note}\\
 % \fx provides four note insertion commands corresponding to different
 % levels of importance (notes, warnings, errors and fatal errors).
 % \cs{fxfatal} is a bit different from the other ones, as will be explained in
