--- a/fixme.dtx
+++ b/fixme.dtx
@@ -78,11 +78,17 @@
 % \MakeShortVerb{\|}
 %
 % \makeatletter
+% \def\ps@mystyle{
+%   \def\@oddfoot{\hfil\thepage\hfil}
+%   \def\@evenfoot{\hfil\thepage\hfil}
+%   \def\@evenhead{\hfil\slshape\leftmark}
+%   \def\@oddhead{\slshape\rightmark\hfil}}
 % \renewcommand\paragraph{\@startsection{paragraph}{4}{\z@}{%
 %     -3.25ex\@plus -1ex \@minus -.2ex}{%
 %     1.5ex \@plus .2ex}{%
 %     \normalfont\normalsize\bfseries}}
 % \makeatother
+%
 % \newcommand\subsubsubsection[1]{\paragraph{#1:}}
 %
 % ^^A Let's not depend on varioref for just that:
@@ -96,6 +102,9 @@
 % \newcommand\fx{\fixmelogo\xspace}
 % \newcommand\packagecopyright{%
 %   Copyright \copyright{} 1998--2002, 2004--2007, 2009 Didier Verna}
+%
+% \pagestyle{mystyle}
+% \markright{\hskip-.5\marginparwidth \fx \fileversion{} (\filedate)}
 %
 % \date{\texttt{\fileversion{} (\filedate)}}
 % \title{\fx{} -- a \LaTeXe{} package for inserting fixme notes in your
