--- a/fixme.dtx
+++ b/fixme.dtx
@@ -846,6 +846,8 @@
 %   Support for alternate layout autoswitch in \TeX's inner mode, suggested by
 %   Will Robertson.\\
 %   Support for automatic language tracking in multilingual documents.\\
+%   Support for themes.\\
+%   Extended support for user-provided layouts.\\
 %   Support for \texttt{key=value} argument syntax in the whole user
 %   interface.\\
 %   New command \cs{fxsetup}.\\
