--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2561,6 +2561,89 @@
 \renewcommand*\FXEnvLayoutBoldEnd[2]{\@fxdosig{#2}\@fxtempsig}
 %</fxthemesignature>
 %    \end{macrocode}
+%
+% \subsection{The ``color theme}
+% This theme overrides the existing layouts to use different colors for the
+% different note levels. As a consequence, it also avoids printing the
+% note names.
+%    \begin{macrocode}
+%<*fxthemecolor>
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{fxthemecolor}
+
+\RequirePackage{color}
+
+\newcommand\@fxdocolon[1]{%
+  \ifthenelse{\equal{#1}{}}{\def\@fxcolon{}}{\def\@fxcolon{: }}}
+
+%    \end{macrocode}
+% \begin{color}{fxnote}
+%   \begin{color}{fxwarning}
+%     \begin{color}{fxerror}
+%       \begin{color}{fxfatal}
+%         We provide a color for every note level. The user may call
+%         \cs{definecolor} again to override the default values.
+%    \begin{macrocode}
+\definecolor{fxnote}{rgb}{0.0000,0.6000,0.0000}
+\definecolor{fxwarning}{rgb}{1.0000,0.5490,0.0000}
+\definecolor{fxerror}{rgb}{1.0000,0.2706,0.0000}
+\definecolor{fxfatal}{rgb}{1.0000,0.0000,0.0000}
+\definecolor{fxtarget}{rgb}{0.3725,0.6196,0.6275}
+
+%    \end{macrocode}
+%       \end{color}
+%     \end{color}
+%   \end{color}
+% \end{color}
+%    \begin{macrocode}
+\renewcommand*\FXLayoutFootnote[3]{%
+  \@fxdocolon{#3}%
+  \footnote{\color{fx#1}\ignorespaces#3\@fxcolon #2}}
+\renewcommand*\FXLayoutMargin[3]{%
+  \@fxdocolon{#3}%
+  \marginpar[%
+  \footnotesize\raggedleft\color{fx#1}\ignorespaces#3\@fxcolon#2]{%
+    \footnotesize\raggedright\color{fx#1}\ignorespaces#3\@fxcolon#2}}
+\renewcommand*\FXLayoutMarginClue[3]{%
+  \marginpar[\footnotesize\raggedleft\color{fx#1}\ignorespaces#3!]{%
+    \footnotesize\raggedright\color{fx#1}\ignorespaces#3!}}
+\renewcommand*\FXLayoutInline[3]{%
+  \@fxdocolon{#3}%
+  {\color{fx#1}\ignorespaces#3\@fxcolon#2}}
+\renewcommand*\FXLayoutIndex[3]{%
+  \iffx@mode@multiuser%
+    \index{***@\fixmeindexname:%
+      !\@nameuse{@fx#1key}@\@nameuse{fx#1sname}:%
+      !{\color{fx#1}\@nameuse{thefx#1count}: #3: #2}}%
+    \index{***#3@\fixmeindexname{} (#3):%
+      !\@nameuse{@fx#1key}@\@nameuse{fx#1sname}:%
+      !{\color{fx#1}\@nameuse{thefx#1count}: #2}}%
+  \else%
+    \index{***@\fixmeindexname:%
+      !\@nameuse{@fx#1key}@\@nameuse{fx#1sname}:%
+      !{\color{fx#1}\@nameuse{thefx#1count}: #2}}%
+  \fi}
+
+\renewcommand*\FXLayoutContentsLine[3]{%
+  \@fxdocolon{#3}%
+  \iffx@mode@multiuser%
+    \fxaddcontentsline{\color{fx#1}\ignorespaces#3\@fxcolon#2}%
+  \else%
+    \fxaddcontentsline{\color{fx#1}#2}%
+  \fi}
+
+\newcommand*\FXEnvLayoutColorBegin[2]{%
+  \@fxdocolon{#2}%
+  \color{fx#1}\ignorespaces#2\@fxcolon\ignorespaces}
+\newcommand*\FXEnvLayoutColorEnd[2]{}
+\FXRegisterEnvLayout{color}{\FXEnvLayoutColorBegin}{\FXEnvLayoutColorEnd}
+\@fxsetkeys{envlayout}{envlayout=color}
+
+\newcommand\FXTargetLayoutColor[1]{\begingroup\color{fxtarget}#1\endgroup}
+\FXRegisterTargetLayout{color}{\FXTargetLayoutColor}
+\@fxsetkeys{targetlayout}{targetlayout=color}
+%</fxthemecolor>
+%    \end{macrocode}
 % ^^A \PrintChanges
 % \PrintIndex
 % \Finale
