--- a/fixme.dtx
+++ b/fixme.dtx
@@ -503,7 +503,7 @@
 % There is no other environment layout built in the core of \fx, so there
 % is no reason for you to use this option.
 %
-% \subsection{Controlling the layout of \fx textual targets}
+% \subsection{Controlling the layout of \fx targets}
 % As discussed in section \sectionref{sec:manual:insertion}, the starred
 % versions of the \fx note insertion commands and environments let you
 % highlight a portion of text which is relevant to the current \fx note.
