--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2590,7 +2590,7 @@
 % \section{Additional Layouts}
 % Here are the predefined layouts distributed with \fx.
 %
-% \subsection{Environment layout}
+% \subsection{Environment layouts}
 % \subsubsection{The \texttt{italics} environment layout}
 %    \begin{macrocode}
 %<*fxenvlayoutitalics>
