--- a/fixme.dtx
+++ b/fixme.dtx
@@ -482,7 +482,8 @@
 % these classes, don't forget to choose another layout for \fx, and also
 % avoid using marginal clues.
 %
-% \subsection{Controlling the layout of \fx environments}
+% \subsection{Controlling the layout of \fx
+%   environments\label{sec:manual:envlayoutcontrol}}
 % As discussed in section \sectionref{sec:manual:insertion}, the contents of a
 % \fx environment (a long note) always appears inline. However, the exact
 % way this contents is typeset (in draft mode only) is subject to a layout of
@@ -520,19 +521,18 @@
 % layout''.
 %
 % \DescribeOption{targetlayout}
-% The target layout can be specified with the \texttt{targetlayout} option.
-% This option is very similar to the \texttt{layout} option discussed in
-% section \sectionref{sec:manual:globallayoutcontrol}, with the difference
-% that only one target layout can be active at a time.
+% The desired target layout can be selected with the \texttt{targetlayout}
+% option. This option works pretty much like the \texttt{envlayout} option
+% discussed in section \sectionref{sec:manual:envlayoutcontrol}, as only one
+% target layout can be active at a time.
 %
-% By default, textual targets are typeset in italics. This target layout is
-% named\ldots \texttt{italics}, so you could achieve the same effect by using
-% something like this:
-% \begin{verbatim}
-% \usepackage[targetlayout=italics]{fixme}
-% \end{verbatim}
-% There is no other target layout built in the core of \fx, so there
-% is no reason for you to use this option.
+% \fx comes with two predefined target layouts called \texttt{italics} (the
+% default) and \texttt{bold}. You've probably guessed what they do already.
+% The \texttt{targetlayout} option is understood by the package itself, the
+% \cs{fxsetup} macro and all the starred note insertion commands and
+% environments. The same usage restriction as for the \texttt{envlayout}
+% option applies: it might not be possible to select a target layout in the
+% call to \cs{usepackage} if this layout comes from an external file.
 %
 % \subsection{Controlling the logging of \fx}
 % As well as being displayed in the document itself, all \fx notes are
@@ -1602,10 +1602,11 @@
 % \end{macro}
 %
 % \subsubsection{Environment layout loading}
-% \begin{macro}{loadenvlayout}
+% \begin{macro}{\@fxloadenvlayout}
 %   \marg{name}
 %    \begin{macrocode}
 \newcommand*\@fxloadenvlayout[1]{\RequirePackage{fxenvlayout#1}}
+
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1663,6 +1664,15 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsubsection{Target layout loading}
+% \begin{macro}{\@fxloadtargetlayout}
+%   \marg{name}
+%    \begin{macrocode}
+\newcommand*\@fxloadtargetlayout[1]{\RequirePackage{fxtargetlayout#1}}
+
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsubsection{Target layout control}
 % \begin{option}{targetlayout}
 %   \begin{macro}{\@@fxtargetlayout}
@@ -1673,12 +1683,10 @@
 %     one.
 %    \begin{macrocode}
 \@fxdefinekey{targetlayout}{targetlayout}{%
-  \@ifundefined{@fxtargetlayout@#1}{%
-    \@fxpkgerror{no target layout named '#1'}{%
-      You have requested a target layout named '#1',\MessageBreak
-      but no such layout seem to be registered with FiXme.}}{}%
+  \@ifundefined{@fxtargetlayout@#1}{\@fxloadtargetlayout{#1}}{}%
   \expandafter\let\expandafter\@@fxtargetlayout%
     \csname @fxtargetlayout@#1\endcsname}
+
 %    \end{macrocode}
 %   \end{macro}
 % \end{option}
@@ -2412,51 +2420,35 @@
 % \subsection{Extrernal layout support}
 % \subsubsection{External layout loading}
 % \begin{macro}{\@fxloadlayout}
-%   \begin{macro}{\@fxloadtargetlayout}
-%     \marg{name}\\
 %     These macros implement the loading of the different layouts.
 %    \begin{macrocode}
 \newcommand*\@fxloadlayout[1]{\RequirePackage{fxlayout#1}}
-\newcommand*\@fxloadtargetlayout[1]{\RequirePackage{fxtargetlayout#1}}
 
 %    \end{macrocode}
-%   \end{macro}
 % \end{macro}
 % \subsubsection{External layout activation}
 % \begin{macro}{\@fxuselayout}
-%   \begin{macro}{\@fxusetargetlayout}
 %     \marg{name}\\
 %     These macros load and activate the different layouts.
 %    \begin{macrocode}
 \newcommand*\@fxuselayout[1]{%
   \@fxloadlayout{#1}%
   \@fxsetlayoutkeys{#1=true}}
-\newcommand*\@fxusetargetlayout[1]{%
-  \@fxloadtargetlayout{#1}%
-  \@fxsetkeys{targetlayout}{targetlayout=#1}}
-
 %    \end{macrocode}
-%   \end{macro}
 % \end{macro}
 %
 % \subsubsection{External layout options}
 % \begin{option}{loadlayout}
-%   \begin{option}{loadtargetlayout}
 %     The layout loading options:
 %    \begin{macrocode}
 \@fxdefinekey{layout}{loadlayout}{\@fxloadlayout{#1}}
-\@fxdefinekey{targetlayout}{loadtargetlayout}{\@fxloadtargetlayout{#1}}
 %    \end{macrocode}
-%   \end{option}
 % \end{option}
 % \begin{option}{uselayout}
-%   \begin{option}{usetargetlayout}
 %     The layout activation options:
 %    \begin{macrocode}
 \@fxdefinekey{layout}{uselayout}{\@fxuselayout{#1}}
-\@fxdefinekey{targetlayout}{usetargetlayout}{\@fxusetargetlayout{#1}}
 %    \end{macrocode}
-%   \end{option}
 % \end{option}
 %
 % \subsection{Themes support}
